<resources>
    <string name="app_name">Rectangle Calculator</string>
    <string name="rectangle_height_label">Height</string>
    <string name="rectangle_height_value">0</string>
    <string name="rectangle_width_label">Width</string>
    <string name="rectangle_width_value">0</string>
    <!--<string name="tip_percent_label">Percent</string>-->
    <!--<string name="tip_percent">15%</string>-->
    <!--<string name="increase">+</string>-->
    <!--<string name="decrease">-</string>-->
    <string name="area_label">Area</string>
    <string name="area_value">0.00</string>
    <string name="perimeter_label">Perimeter</string>
    <string name="perimeter_value">0.00</string>
</resources>
