<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context="com.wmdd4940.langara.rectangleCalculator.MainActivity">

    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/rectangle_height_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/billAmountLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/widthEditText"
        android:layout_alignBottom="@+id/widthEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/rectangle_width_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/widthEditText"
        android:layout_marginTop="23dp"
        android:text="@string/area_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/areaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalLabel"
        android:layout_alignLeft="@+id/widthEditText"
        android:layout_alignStart="@+id/widthEditText"
        android:text="@string/area_value"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tipLabel"
        android:layout_marginTop="39dp"
        android:text="@string/perimeter_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/perimeterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/areaTextView"
        android:layout_alignStart="@+id/areaTextView"
        android:layout_alignTop="@+id/totalLabel"
        android:text="@string/perimeter_value"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/widthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/heightEditText"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>
